--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,10 +17,16 @@ jobs:
           registry: docker.pkg.github.com
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: PrepareReg Names
+        run: |
+          echo IMAGE_REPOSITORY=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
+          echo IMAGE_TAG=$(echo ${{ github.ref }} | tr '[:upper:]' '[:lower:]' | awk '{split($0,a,"/"); print a[3]}') >> $GITHUB_ENV
+
       - name: Build container image
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: |
-            docker.pkg.github.com/${{ github.repository }}/scoretrak-client:${{ github.sha }}
-            docker.pkg.github.com/${{ github.repository }}/scoretrak-client:${{ github.ref }}
+            docker.pkg.github.com/${{ IMAGE_REPOSITORY }}/scoretrak-client:${{ github.sha }}
+            docker.pkg.github.com/${{ IMAGE_REPOSITORY }}/scoretrak-client:${{ IMAGE_TAG }}
