--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Log in to GitHub Docker Registry
         uses: docker/login-action@v1
         with:
-          registry: docker.pkg.github.com
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -28,5 +28,5 @@ jobs:
         with:
           push: true
           tags: |
-            docker.pkg.github.com/${{ env.IMAGE_REPOSITORY }}/scoretrak-client:${{ github.sha }}
-            docker.pkg.github.com/${{ env.IMAGE_REPOSITORY }}/scoretrak-client:${{ env.IMAGE_TAG }}
+            ghcr.io${{ env.IMAGE_REPOSITORY }}/scoretrak-client:${{ github.sha }}
+            ghcr.io/${{ env.IMAGE_REPOSITORY }}/scoretrak-client:${{ env.IMAGE_TAG }}
