--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,5 +28,5 @@ jobs:
         with:
           push: true
           tags: |
-            ghcr.io${{ env.IMAGE_REPOSITORY }}/scoretrak-client:${{ github.sha }}
+            ghcr.io/${{ env.IMAGE_REPOSITORY }}/scoretrak-client:${{ github.sha }}
             ghcr.io/${{ env.IMAGE_REPOSITORY }}/scoretrak-client:${{ env.IMAGE_TAG }}
