--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "scoretrak-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -66,6 +66,5 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/uuid": "^8.3.0",
     "react-hook-form": "^6.11.0"
-  },
-  "proxy": "http://192.168.8.200:30080"
+  }
 }
