--- a/package.json
+++ b/package.json
@@ -3,32 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-table/core": "^2.3.26",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-table/core": "^2.3.40",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@nivo/bar": "^0.73.1",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.1",
-    "@testing-library/user-event": "^12.2.0",
-    "@types/google-protobuf": "^3.7.4",
-    "@types/jest": "^26.0.15",
-    "@types/material-ui": "^0.21.8",
-    "@types/node": "^12.19.3",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
-    "@types/react-router": "^5.1.8",
-    "file-saver": "^2.0.2",
-    "google-protobuf": "^3.14.0-rc.1",
+    "@nivo/core": "^0.73.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/google-protobuf": "^3.15.5",
+    "@types/jest": "^26.0.24",
+    "@types/material-ui": "^0.21.9",
+    "@types/node": "^12.20.27",
+    "@types/react": "^16.14.15",
+    "@types/react-dom": "^16.9.14",
+    "@types/react-router": "^5.1.16",
+    "file-saver": "^2.0.5",
+    "google-protobuf": "^3.18.0",
     "grpc-web": "^1.2.1",
-    "jwt-decode": "^3.1.1",
+    "jwt-decode": "^3.1.2",
     "material-table": "1.67.1",
-    "notistack": "^1.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "notistack": "^1.0.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-full-screen": "^0.3.1",
     "react-json-view": "^1.21.3",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.0",
     "ts-transformer-keys": "^0.4.3",
     "typescript": "4.0.3",
@@ -62,9 +63,9 @@
     ]
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.1",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/uuid": "^8.3.0",
-    "react-hook-form": "^6.11.0"
+    "@types/file-saver": "^2.0.3",
+    "@types/react-router-dom": "^5.3.0",
+    "@types/uuid": "^8.3.1",
+    "react-hook-form": "^6.15.8"
   }
 }
