--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@nivo/bar": "^0.64.0",
+    "@nivo/bar": "^0.73.1",
+    "@nivo/core": "^0.73.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
@@ -27,7 +28,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-full-screen": "^0.3.1",
-    "react-json-view": "^1.19.1",
+    "react-json-view": "^1.21.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "ts-transformer-keys": "^0.4.3",
