--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jwt-decode": "^3.1.1",
     "material-table": "1.67.1",
     "notistack": "^1.0.1",
+    "npm-watch": "^0.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-full-screen": "^0.3.1",
@@ -33,6 +34,7 @@
     "react-scripts": "4.0.0",
     "ts-transformer-keys": "^0.4.3",
     "typescript": "4.0.3",
+    "watch": "^1.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
