--- a/package.json
+++ b/package.json
@@ -69,5 +69,6 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/uuid": "^8.3.0",
     "react-hook-form": "^6.11.0"
-  }
+  },
+  "proxy": "http://localhost:30080"
 }
