add fixes for numeric values as NaN

--- a/package.json
+++ b/package.json
@@ -70,5 +70,5 @@
     "@types/uuid": "^8.3.0",
     "react-hook-form": "^6.11.0"
   },
-  "proxy": "http://localhost:30080"
+  "proxy": "https://engine.ubnetdef.org"
 }
