--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "ignorePatterns": [
+      "**/*_pb.js"
     ]
   },
   "browserslist": {
