fix failed generation issue

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,11 +1,11 @@
 version: v1
 plugins:
   - name: js
-    out: src/lib/scoretrakapis/js
+    out: src/lib/scoretrakapis
     opt:
       - import_style=commonjs
   - name: grpc-web
-    out: src/lib/scoretrakapis/grpc-web
+    out: src/lib/scoretrakapis
     opt:
       - import_style=typescript
       - mode=grpcwebtext
