--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.1",
     "react-full-screen": "^0.3.1",
     "react-json-view": "^1.21.3",
+    "react-refresh": "^0.12.0",
     "react-router": "^5.1.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
@@ -73,5 +74,5 @@
     "@types/uuid": "^8.3.0",
     "react-hook-form": "^6.11.0"
   },
-  "proxy": "https://engine.ubnetdef.org"
+  "proxy": "https://scoretrak.example.com:30080"
 }
