--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -33,7 +33,6 @@
     "react-router": "^5.1.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "ts-transformer-keys": "^0.4.3",
     "typescript": "4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -71,5 +70,5 @@
     "@types/uuid": "^8.3.0",
     "react-hook-form": "^6.11.0"
   },
-  "proxy": "https://engine.ubnetdef.org"
+  "proxy": "http://scoretrak.example.com:30080"
 }
