--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -3,35 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-table/core": "^2.3.26",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-table/core": "^0.2.29",
+    "@mui/icons-material": "^5.6.1",
+    "@mui/lab": "^5.0.0-alpha.77",
+    "@mui/material": "^5.6.1",
+    "@mui/styles": "^5.6.1",
     "@nivo/bar": "^0.79.1",
     "@nivo/core": "^0.79.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "@types/file-saver": "^2.0.1",
     "@types/google-protobuf": "^3.7.4",
     "@types/jest": "^26.0.15",
-    "@types/material-ui": "^0.21.8",
     "@types/node": "^12.19.3",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "@types/file-saver": "^2.0.1",
+    "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
     "@types/uuid": "^8.3.0",
-    "@types/react-router": "^5.1.8",
     "clsx": "^1.1.1",
     "file-saver": "^2.0.2",
     "google-protobuf": "^3.14.0-rc.1",
     "grpc-web": "^1.2.1",
     "jwt-decode": "^3.1.1",
-    "notistack": "^1.0.1",
+    "notistack": "^2.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-full-screen": "^1.1.0",
     "react-hook-form": "^6.11.0",
-    "react-full-screen": "^0.3.1",
     "react-json-view": "^1.21.3",
     "react-refresh": "^0.12.0",
     "react-router": "^5.1.8",
