--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -12,6 +12,7 @@
     "@mui/styles": "^5.6.1",
     "@nivo/bar": "^0.79.1",
     "@nivo/core": "^0.79.0",
+    "@scoretrak/scoretrakapis": "workspace:*",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
@@ -19,8 +20,6 @@
     "@types/google-protobuf": "^3.7.4",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.19.3",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
     "@types/uuid": "^8.3.0",
@@ -35,42 +34,23 @@
     "react-full-screen": "^1.1.0",
     "react-hook-form": "^6.11.0",
     "react-json-view": "^1.21.3",
-    "react-refresh": "^0.12.0",
     "react-router": "^5.1.8",
     "react-router-dom": "^5.2.0",
-    "typescript": "4.6.3",
-    "web-vitals": "^2.1.4"
+    "vite-plugin-env-compatible": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "vite",
     "prebuild": "buf generate --template buf.gen.yaml 'https://github.com/scoretrak/scoretrakapis.git'",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "ignorePatterns": [
-      "**/*_pb.js"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1"
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@vitejs/plugin-react": "^1.3.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.5"
   },
   "proxy": "http://scoretrak.example.com:30080"
 }
