--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": ">=7.0.0 <8.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-table/core": "^0.2.29",
@@ -12,7 +13,9 @@
     "@mui/styles": "^5.6.1",
     "@nivo/bar": "^0.79.1",
     "@nivo/core": "^0.79.0",
+    "@nivo/tooltip": "0.79.0",
     "@scoretrak/scoretrakapis": "workspace:*",
+    "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
@@ -29,6 +32,7 @@
     "grpc-web": "^1.2.1",
     "jwt-decode": "^3.1.1",
     "notistack": "^2.0.4",
+    "prop-types": ">=15.5.10 <16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.1.0",
