--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -54,6 +54,7 @@
     "@types/react-dom": "^17.0.11",
     "@vitejs/plugin-react": "^1.3.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "prettier": "^2.5.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.5"
   },
