--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "turbo run start --parallel",
     "preview": "turbo run preview --parallel",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "prettier": "^2.5.1",
