--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "start": "turbo run start --parallel",
     "preview": "turbo run preview --parallel",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "prepare": "husky install"
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
     "prettier": "^2.5.1",
