--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@types/jest": "^26.0.15",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^12.19.3",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
     "@types/react-router": "^5.1.8",
     "file-saver": "^2.0.2",
     "google-protobuf": "^3.14.0-rc.1",
@@ -36,6 +36,10 @@
     "typescript": "4.0.3",
     "watch": "^1.0.2",
     "web-vitals": "^0.2.4"
+  },
+  "resolutions": {
+    "@types/react": "17.0.45",
+    "@types/react-dom": "17.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
