--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@nivo/bar": "^0.73.1",
-    "@nivo/core": "^0.73.0",
+    "@nivo/bar": "^0.79.1",
+    "@nivo/core": "^0.79.0",
+    "@nivo/tooltip": "0.79.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.2.5",
@@ -25,6 +26,7 @@
     "jwt-decode": "^3.1.1",
     "notistack": "^1.0.1",
     "npm-watch": "^0.11.0",
+    "prop-types": ">= 15.5.10 < 16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-full-screen": "^0.3.1",
@@ -70,5 +72,5 @@
     "@types/uuid": "^8.3.0",
     "react-hook-form": "^6.11.0"
   },
-  "proxy": "https://engine.ubnetdef.org"
+  "proxy": "http://scoretrak.example.com:30080"
 }
