--- a/package.json
+++ b/package.json
@@ -71,6 +71,9 @@
     "@types/file-saver": "^2.0.1",
     "@types/react-router-dom": "^5.1.6",
     "@types/uuid": "^8.3.0",
+    "@babel/core": "^7.0.0-0",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
     "react-hook-form": "^6.11.0"
   },
   "proxy": "http://scoretrak.example.com:30080"
