--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@nivo/bar": "^0.79.1",
     "@nivo/core": "^0.79.0",
     "@nivo/tooltip": "0.79.0",
+    "@types/file-saver": "^2.0.1",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/uuid": "^8.3.0",
     "@types/google-protobuf": "^3.7.4",
     "@types/jest": "^28.1.6",
     "@types/material-ui": "^0.21.8",
@@ -29,6 +32,7 @@
     "react-full-screen": "^1.1.1",
     "react-json-view": "^1.21.3",
     "react-router-dom": "^5.2.0",
+    "react-hook-form": "^6.11.0",
     "react-scripts": "5.0.1",
     "ts-transformer-keys": "^0.4.3",
     "typescript": "4.7.4",
@@ -64,17 +68,13 @@
     ]
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.1",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/uuid": "^8.3.0",
     "@babel/core": "^7.0.0-0",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
-    "@testing-library/user-event": "^14.2.5",
-    "react-hook-form": "^6.11.0"
+    "@testing-library/user-event": "^14.2.5"
   },
   "proxy": "http://scoretrak.example.com:30080"
 }
