--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-table/core": "^2.3.26",
+    "@date-io/core": "^1.3.13",
+    "@material-table/core": "^4.3.44",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -11,8 +12,6 @@
     "@nivo/core": "^0.79.0",
     "@nivo/tooltip": "0.79.0",
     "@types/file-saver": "^2.0.1",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/uuid": "^8.3.0",
     "@types/google-protobuf": "^3.7.4",
     "@types/jest": "^28.1.6",
     "@types/material-ui": "^0.21.8",
@@ -20,6 +19,8 @@
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
     "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/uuid": "^8.3.0",
     "file-saver": "^2.0.2",
     "google-protobuf": "^3.14.0-rc.1",
     "grpc-web": "^1.2.1",
@@ -30,9 +31,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.1.1",
+    "react-hook-form": "^6.11.0",
     "react-json-view": "^1.21.3",
     "react-router-dom": "^5.2.0",
-    "react-hook-form": "^6.11.0",
     "react-scripts": "5.0.1",
     "ts-transformer-keys": "^0.4.3",
     "typescript": "4.7.4",
