--- a/package.json
+++ b/package.json
@@ -77,5 +77,5 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.2.5"
   },
-  "proxy": "http://scoretrak.example.com:30080"
+  "proxy": "https://engine.ubnetdef.org"
 }
