--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-json-view": "^1.21.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "ts-transformer-keys": "^0.4.3",
     "typescript": "4.7.4",
     "watch": "^1.0.2",
