--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@nivo/bar": "^0.79.1",
     "@nivo/core": "^0.79.0",
     "@nivo/tooltip": "0.79.0",
+    "@tanstack/react-query": "^4.2.1",
     "@types/file-saver": "^2.0.1",
     "@types/google-protobuf": "^3.7.4",
     "@types/jest": "^28.1.6",
