--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@buf/grpc_web_scoretrak_scoretrakapis": "^1.7.5",
     "@date-io/core": "^1.3.13",
     "@material-table/core": "^4.3.44",
     "@material-ui/core": "^4.11.3",
