--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.1.1",
-    "react-hook-form": "^6.11.0",
+    "react-hook-form": "^6.15.8",
     "react-json-view": "^1.21.3",
     "react-router-dom": "^6.3.0",
     "react-use": "^17.4.0"
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.0",
     "@types/file-saver": "^2.0.1",
     "@types/google-protobuf": "^3.7.4",
     "@types/material-ui": "^0.21.8",
