--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@buf/grpc_web_scoretrak_scoretrakapis": "^1.14.13",
+    "@buf/scoretrak_scoretrakapis.grpc_web": "^1.4.2-20230107032708-827817a34c0e.2",
     "@date-io/core": "^1.3.13",
     "@material-table/core": "^4.3.44",
     "@material-ui/core": "^4.11.3",
@@ -15,7 +15,7 @@
     "@tanstack/react-query": "^4.2.1",
     "@tanstack/react-query-devtools": "^4.16.1",
     "file-saver": "^2.0.2",
-    "google-protobuf": "^3.14.0-rc.1",
+    "google-protobuf": "^3.21.2",
     "grpc-web": "^1.4.2",
     "jwt-decode": "^3.1.1",
     "notistack": "^1.0.10",
