--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "dev": "vite",
     "dev:clean": "npm run dev -- --force",
     "build": "tsc && vite build",
-    "serve": "vite preview --port 3000"
+    "serve": "vite preview --port 3000",
+    "cypress:open": "cypress open"
   },
   "browserslist": {
     "production": [
@@ -59,6 +60,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.0",
     "@vitejs/plugin-react": "^2.0.1",
+    "cypress": "^12.3.0",
     "prettier": "2.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.9",
